few fix, added backstretch

--- a/empor/static/style/extra.css
+++ b/empor/static/style/extra.css
@@ -2,6 +2,16 @@ div.menu_pop {
     display: none;
 }
 
+.backstretch::after { 
+    content: '';
+    background: transparent url(../images/pattern.png) repeat top left; 
+}
+
+.backstretch::after {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+}
 div.index_itembox {
     margin-left: 8px;
     margin-top: 8px;
